src/qt/libqtextobject.bf

	
	public void CharFormat()
	{
		CQt.QTextBlock_CharFormat(this.nativePtr);
	}
	
	public int32 CharFormatIndex()
	{
		return CQt.QTextBlock_CharFormatIndex(this.nativePtr);
	}
	
	public int64 TextDirection()
	{
		return CQt.QTextBlock_TextDirection(this.nativePtr);
	}
	
	public libqt_string Text()
	{
		return CQt.QTextBlock_Text(this.nativePtr);
	}
	
	public QTextLayout__FormatRange[] TextFormats()
	{
		return CQt.QTextBlock_TextFormats(this.nativePtr);
	}
	
	public void* Document()
	{
		return CQt.QTextBlock_Document(this.nativePtr);
	}
	
	public void* TextList()
	{
		return CQt.QTextBlock_TextList(this.nativePtr);
	}
	
	public void* UserData()
	{
		return CQt.QTextBlock_UserData(this.nativePtr);
	}
	
	public void SetUserData(void* data)
	{
		CQt.QTextBlock_SetUserData(this.nativePtr, data);
	}
	
	public int32 UserState()
	{
		return CQt.QTextBlock_UserState(this.nativePtr);
	}
	
	public void SetUserState(int32 state)
	{
		CQt.QTextBlock_SetUserState(this.nativePtr, state);
	}
	
	public int32 Revision()
	{
		return CQt.QTextBlock_Revision(this.nativePtr);
	}
	
	public void SetRevision(int32 rev)
	{
		CQt.QTextBlock_SetRevision(this.nativePtr, rev);
	}
	
	public bool IsVisible()
	{
		return CQt.QTextBlock_IsVisible(this.nativePtr);
	}
	
	public void SetVisible(bool visible)
	{
		CQt.QTextBlock_SetVisible(this.nativePtr, visible);
	}
	
	public int32 BlockNumber()
	{
		return CQt.QTextBlock_BlockNumber(this.nativePtr);
	}
	
	public int32 FirstLineNumber()
	{
		return CQt.QTextBlock_FirstLineNumber(this.nativePtr);
	}
	
	public void SetLineCount(int32 count)
	{
		CQt.QTextBlock_SetLineCount(this.nativePtr, count);
	}
	
	public int32 LineCount()
	{
		return CQt.QTextBlock_LineCount(this.nativePtr);
	}
	
	public QTextBlock__iterator Begin()
	{
		return CQt.QTextBlock_Begin(this.nativePtr);
	}
	
	public QTextBlock__iterator End()
	{
		return CQt.QTextBlock_End(this.nativePtr);
	}
	
	public void Next()
	{
		CQt.QTextBlock_Next(this.nativePtr);
	}
	
	public void Previous()
	{
		CQt.QTextBlock_Previous(this.nativePtr);
	}
	
	public int32 FragmentIndex()
	{
		return CQt.QTextBlock_FragmentIndex(this.nativePtr);
	}
	
}
extension CQt
{
	[LinkName("QTextBlock_new")]
	public static extern void* QTextBlock_new();
	[LinkName("QTextBlock_new2")]
	public static extern void* QTextBlock_new2(void* o);
	[LinkName("QTextBlock_OperatorAssign")]
	public static extern void QTextBlock_OperatorAssign(void* c_this, void* o);
	[LinkName("QTextBlock_IsValid")]
	public static extern bool QTextBlock_IsValid(void* c_this);
	[LinkName("QTextBlock_OperatorEqual")]
	public static extern bool QTextBlock_OperatorEqual(void* c_this, void* o);
	[LinkName("QTextBlock_OperatorNotEqual")]
	public static extern bool QTextBlock_OperatorNotEqual(void* c_this, void* o);
	[LinkName("QTextBlock_OperatorLesser")]
	public static extern bool QTextBlock_OperatorLesser(void* c_this, void* o);
	[LinkName("QTextBlock_Position")]
	public static extern int32 QTextBlock_Position(void* c_this);
	[LinkName("QTextBlock_Length")]
	public static extern int32 QTextBlock_Length(void* c_this);
	[LinkName("QTextBlock_Contains")]
	public static extern bool QTextBlock_Contains(void* c_this, int32 position);
	[LinkName("QTextBlock_Layout")]
	public static extern void* QTextBlock_Layout(void* c_this);
	[LinkName("QTextBlock_ClearLayout")]
	public static extern void QTextBlock_ClearLayout(void* c_this);
	[LinkName("QTextBlock_BlockFormat")]
	public static extern void QTextBlock_BlockFormat(void* c_this);
	[LinkName("QTextBlock_BlockFormatIndex")]
	public static extern int32 QTextBlock_BlockFormatIndex(void* c_this);
	[LinkName("QTextBlock_CharFormat")]
	public static extern void QTextBlock_CharFormat(void* c_this);
	[LinkName("QTextBlock_CharFormatIndex")]
	public static extern int32 QTextBlock_CharFormatIndex(void* c_this);
	[LinkName("QTextBlock_TextDirection")]
	public static extern int64 QTextBlock_TextDirection(void* c_this);
	[LinkName("QTextBlock_Text")]
	public static extern libqt_string QTextBlock_Text(void* c_this);
	[LinkName("QTextBlock_TextFormats")]
	public static extern QTextLayout__FormatRange[] QTextBlock_TextFormats(void* c_this);
	[LinkName("QTextBlock_Document")]
	public static extern void* QTextBlock_Document(void* c_this);
	[LinkName("QTextBlock_TextList")]
	public static extern void* QTextBlock_TextList(void* c_this);
	[LinkName("QTextBlock_UserData")]
	public static extern void* QTextBlock_UserData(void* c_this);
	[LinkName("QTextBlock_SetUserData")]
	public static extern void QTextBlock_SetUserData(void* c_this, void* data);
	[LinkName("QTextBlock_UserState")]
	public static extern int32 QTextBlock_UserState(void* c_this);
	[LinkName("QTextBlock_SetUserState")]
	public static extern void QTextBlock_SetUserState(void* c_this, int32 state);
	[LinkName("QTextBlock_Revision")]
	public static extern int32 QTextBlock_Revision(void* c_this);
	[LinkName("QTextBlock_SetRevision")]
	public static extern void QTextBlock_SetRevision(void* c_this, int32 rev);
	[LinkName("QTextBlock_IsVisible")]
	public static extern bool QTextBlock_IsVisible(void* c_this);
	[LinkName("QTextBlock_SetVisible")]
	public static extern void QTextBlock_SetVisible(void* c_this, bool visible);
	[LinkName("QTextBlock_BlockNumber")]
	public static extern int32 QTextBlock_BlockNumber(void* c_this);
	[LinkName("QTextBlock_FirstLineNumber")]
	public static extern int32 QTextBlock_FirstLineNumber(void* c_this);
	[LinkName("QTextBlock_SetLineCount")]
	public static extern void QTextBlock_SetLineCount(void* c_this, int32 count);
	[LinkName("QTextBlock_LineCount")]
	public static extern int32 QTextBlock_LineCount(void* c_this);
	[LinkName("QTextBlock_Begin")]
	public static extern QTextBlock__iterator QTextBlock_Begin(void* c_this);
	[LinkName("QTextBlock_End")]
	public static extern QTextBlock__iterator QTextBlock_End(void* c_this);
	[LinkName("QTextBlock_Next")]
	public static extern void QTextBlock_Next(void* c_this);
	[LinkName("QTextBlock_Previous")]
	public static extern void QTextBlock_Previous(void* c_this);
	[LinkName("QTextBlock_FragmentIndex")]
	public static extern int32 QTextBlock_FragmentIndex(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QTextBlock_Delete")]
	public static extern void QTextBlock_Delete(void* self);
}
public class QTextFragment
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QTextFragment_new();
	}
	
	public ~this()
	{
		CQt.QTextFragment_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(void* o)
	{
		CQt.QTextFragment_OperatorAssign(this.nativePtr, o);
	}
	
	public bool IsValid()
	{
		return CQt.QTextFragment_IsValid(this.nativePtr);
	}
	
	public bool OperatorEqual(void* o)
	{
		return CQt.QTextFragment_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(void* o)
	{
		return CQt.QTextFragment_OperatorNotEqual(this.nativePtr, o);
	}
	
	public bool OperatorLesser(void* o)
	{
		return CQt.QTextFragment_OperatorLesser(this.nativePtr, o);
	}
	
	public int32 Position()
	{
		return CQt.QTextFragment_Position(this.nativePtr);
	}
	
	public int32 Length()
	{
		return CQt.QTextFragment_Length(this.nativePtr);
	}
	
	public bool Contains(int32 position)
	{
		return CQt.QTextFragment_Contains(this.nativePtr, position);
	}
	
	public void CharFormat()
	{
		CQt.QTextFragment_CharFormat(this.nativePtr);
	}
	
	public int32 CharFormatIndex()
	{
		return CQt.QTextFragment_CharFormatIndex(this.nativePtr);
	}
	
	public libqt_string Text()
	{
		return CQt.QTextFragment_Text(this.nativePtr);
	}
	
	public void[] GlyphRuns()
	{
		return CQt.QTextFragment_GlyphRuns(this.nativePtr);
	}
	
	public void[] GlyphRuns1(int32 from)
	{
		return CQt.QTextFragment_GlyphRuns1(this.nativePtr, from);
	}
	
	public void[] GlyphRuns2(int32 from, int32 length)
	{
		return CQt.QTextFragment_GlyphRuns2(this.nativePtr, from, length);
	}
	
}
extension CQt
{
	[LinkName("QTextFragment_new")]
	public static extern void* QTextFragment_new();
	[LinkName("QTextFragment_new2")]
	public static extern void* QTextFragment_new2(void* o);
	[LinkName("QTextFragment_OperatorAssign")]
	public static extern void QTextFragment_OperatorAssign(void* c_this, void* o);
	[LinkName("QTextFragment_IsValid")]
	public static extern bool QTextFragment_IsValid(void* c_this);
	[LinkName("QTextFragment_OperatorEqual")]
	public static extern bool QTextFragment_OperatorEqual(void* c_this, void* o);
	[LinkName("QTextFragment_OperatorNotEqual")]
	public static extern bool QTextFragment_OperatorNotEqual(void* c_this, void* o);
	[LinkName("QTextFragment_OperatorLesser")]
	public static extern bool QTextFragment_OperatorLesser(void* c_this, void* o);
	[LinkName("QTextFragment_Position")]
	public static extern int32 QTextFragment_Position(void* c_this);
	[LinkName("QTextFragment_Length")]
	public static extern int32 QTextFragment_Length(void* c_this);
	[LinkName("QTextFragment_Contains")]
	public static extern bool QTextFragment_Contains(void* c_this, int32 position);
	[LinkName("QTextFragment_CharFormat")]
	public static extern void QTextFragment_CharFormat(void* c_this);
	[LinkName("QTextFragment_CharFormatIndex")]
	public static extern int32 QTextFragment_CharFormatIndex(void* c_this);
	[LinkName("QTextFragment_Text")]
	public static extern libqt_string QTextFragment_Text(void* c_this);
	[LinkName("QTextFragment_GlyphRuns")]
	public static extern void[] QTextFragment_GlyphRuns(void* c_this);
	[LinkName("QTextFragment_GlyphRuns1")]
	public static extern void[] QTextFragment_GlyphRuns1(void* c_this, int32 from);
	[LinkName("QTextFragment_GlyphRuns2")]
	public static extern void[] QTextFragment_GlyphRuns2(void* c_this, int32 from, int32 length);
	/// Delete this object from C++ memory
	[LinkName("QTextFragment_Delete")]
	public static extern void QTextFragment_Delete(void* self);
}
public class QTextFrame__iterator
{
	protected void* nativePtr;
	
	public this(QTextFrame__iterator* other)
	{
		this.nativePtr = CQt.QTextFrame__iterator_new(other);
	}
	
	public ~this()
	{
		CQt.QTextFrame__iterator_Delete(this.nativePtr);
	}
	
	public void* ParentFrame()
	{
		return CQt.QTextFrame__iterator_ParentFrame(this.nativePtr);
	}
	
	public void* CurrentFrame()
	{
		return CQt.QTextFrame__iterator_CurrentFrame(this.nativePtr);
	}
	
	public void CurrentBlock()
	{
		CQt.QTextFrame__iterator_CurrentBlock(this.nativePtr);
	}
	
	public bool AtEnd()
	{
		return CQt.QTextFrame__iterator_AtEnd(this.nativePtr);
	}
	
	public bool OperatorEqual(QTextFrame__iterator* o)
	{
		return CQt.QTextFrame__iterator_OperatorEqual(this.nativePtr, o);
	}
	
	public bool OperatorNotEqual(QTextFrame__iterator* o)
	{
		return CQt.QTextFrame__iterator_OperatorNotEqual(this.nativePtr, o);
	}
	
	public QTextFrame__iterator* OperatorPlusPlus()
	{
		return CQt.QTextFrame__iterator_OperatorPlusPlus(this.nativePtr);
	}
	
	public QTextFrame__iterator OperatorPlusPlusWithInt(int32 param1)
	{
		return CQt.QTextFrame__iterator_OperatorPlusPlusWithInt(this.nativePtr, param1);
	}
	
	public QTextFrame__iterator* OperatorMinusMinus()
	{
		return CQt.QTextFrame__iterator_OperatorMinusMinus(this.nativePtr);
	}
	
	public QTextFrame__iterator OperatorMinusMinusWithInt(int32 param1)
	{
		return CQt.QTextFrame__iterator_OperatorMinusMinusWithInt(this.nativePtr, param1);
	}
	
}
